# Pathos-AI

./: .gitignore  .pre-commit-config.yaml  CONCEPTS.md  README.md  issues.json  issues_full.json  pyproject.toml
src/pathos/: core.py
src/pathos/adversarial/: core.py
src/pathos/csp/: __init__.py  core.py  solvers.py
src/pathos/examples/: free_grid.py  map_coloring.py  maze.py  number_line.py  river.py  tictactoe.py  trivial.py
src/pathos/searching/: informed.py  uniformed.py
tests/: test_core.py  test_core_board.py
tests/test_csp/: test_solvers.py
tests/test_informed/: test_A*.py  test_ucs.py
tests/test_uniformed/: test_bfs.py  test_dfs.py  test_river.py
tests/test_uniformed.py/: test_bfs.py  test_dfs.py
